# miden-vm

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  background.html  background_material.html  design.html  index.html  intro.html  introduction.html  main.html  print.html  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  toc.html  toc.js  user_docs.html  user_documentation.html
air/: Cargo.toml  README.md
air/benches/: compute_op_flags.rs  enforce_stack_constraint.rs
air/src/: errors.rs  execution.rs  gkr_proof.rs  lib.rs  logup_gkr.rs  memory.rs  options.rs  proof.rs  range.rs  tests.rs  trace_state.rs  transition.rs  utils.rs
air/src/aux_table/: bitwise.rs  memory.rs  mod.rs
air/src/chiplets/: mod.rs
air/src/constraints/: logup.rs  mod.rs  range.rs
air/src/decoder/: flow_ops.rs  mod.rs  op_bits.rs  op_sponge.rs
air/src/gkr_verifier/: mod.rs
air/src/logup_gkr/: chiplets_bus.rs  composition_polynomials.rs  mod.rs  multilinear.rs  sumcheck.rs
air/src/stack/: hash.rs  manipulation.rs  mod.rs
air/src/trace/: logup.rs  main_trace.rs  mod.rs  range.rs  rows.rs
assembly/: Cargo.toml  README.md  build.rs
assembly-syntax/: Cargo.toml  build.rs
assembly-syntax/src/: diagnostics.rs  lib.rs  parse.rs
assembly-syntax/src/ast/: advice_map_entry.rs  constants.rs  immediate.rs  imports.rs  invocation_target.rs  mod.rs  module.rs  op.rs  tests.rs
assembly-syntax/src/parser/: error.rs  grammar.lalrpop  lexer.rs  mod.rs  scanner.rs  token.rs
assembly-syntax/src/sema/: context.rs  errors.rs  mod.rs
assembly-syntax/src/testing/: context.rs  mod.rs  pattern.rs
assembly/benches/: deserialize_std_lib.rs  program_compilation.rs  script_compilation.rs
assembly/doc/: assembly.md
assembly/src/: assembler.rs  basic_block_builder.rs  compile.rs  compiled_library.rs  diagnostics.rs  errors.rs  id.rs  lib.rs  library.rs  mast_forest_builder.rs  mast_forest_merger_tests.rs  parse.rs  parsers.rs  path.rs  procedure.rs  procedures.rs  testing.rs  tests.rs
assembly/src/assembler/: basic_block_builder.rs  callgraph.rs  context.rs  dead_code_elimination.rs  id.rs  mast_forest_builder.rs  mast_forest_merger_tests.rs  mod.rs  module_graph.rs  module_provider.rs  procedure.rs  procedure_cache.rs  span_builder.rs  tests.rs
assembly/src/ast/: advicemap_entry.rs  block.rs  code_body.rs  constants.rs  docstring.rs  form.rs  format.rs  ident.rs  immediate.rs  imports.rs  invocation_target.rs  mod.rs  module.rs  module_import.rs  op.rs  procedure.rs  program.rs  serde.rs  tests.rs  visit.rs
assembly/src/context/: mod.rs
assembly/src/instruction/: adv_ops.rs  crypto_ops.rs  debug.rs  env_ops.rs  ext2_ops.rs  field_ops.rs  mem_ops.rs  mod.rs  procedures.rs  u32_ops.rs
assembly/src/linker/: callgraph.rs  debug.rs  errors.rs  mod.rs  name_resolver.rs
assembly/src/parser/: error.rs  grammar.lalrpop  lexer.rs  location.rs  mod.rs  scanner.rs  span.rs  token.rs
assembly/src/parsers/: adv_ops.rs  blocks.rs  body.rs  context.rs  crypto_ops.rs  field_ops.rs  io_ops.rs  (+7 more)
core/: Cargo.toml  README.md  build.rs
core-diagnostics/: Cargo.toml
core-diagnostics/src/: label.rs  lib.rs  related.rs  reporting.rs
core/doc/: isa.md  programs.md
core/src/: aux_table.rs  errors.rs  kernel.rs  lib.rs  opcodes.rs  outputs.rs  program.rs  random.rs  range.rs  sys_events.rs
distaff/: Cargo.toml  README.md
distaff/src/: lib.rs  tests.rs
examples/: Cargo.toml  README.md
examples/src/: collatz.rs  comparison.rs  conditional.rs  fibonacci.rs  lib.rs  main.rs  merkle.rs  range.rs  utils.rs
gkr/: Cargo.toml
miden/: Cargo.toml  README.md
miden-test-utils/: Cargo.toml
miden-test-utils/src/: lib.rs  tester.rs
miden-vm/: Cargo.toml  README.md
miden-vm/benches/: deserialize_std_lib.rs  program_execution.rs  program_execution_fast.rs
miden-vm/src/: internal.rs  lib.rs
miden/benches/: deserialize_std_lib.rs  experiments.rs  program_compilation.rs  program_execution.rs  program_execution_fast.rs  program_execution_no_trace.rs  simple_program_execution.rs
miden/masm-examples/: README.md
miden/src/: internal.rs  lib.rs  main.rs  tests.rs  utils.rs
package/: Cargo.toml  README.md
package/src/: artifact.rs  de.rs  lib.rs  package.rs  rodata.rs  se.rs  tests.rs
processor/: Cargo.toml  README.md
processor/benches/: program_execution.rs  script_execution.rs
processor/src/: debug.rs  errors.rs  lib.rs  processor.rs  tests.rs  trace.rs  utils.rs
prover/: Cargo.toml  README.md
prover/src/: gpu.rs  lib.rs
stdlib/: Cargo.toml  README.md  build.rs  md_renderer.rs  stdlib_docs.rs
stdlib/asm/: mem.masm  sys.masm  utils.masm
stdlib/assets/: std.masl
stdlib/benches/: compilation.rs  deserialize_std_lib.rs
stdlib/docs/: base_field_ec_ext5.md  base_field_ecgfp5.md  base_field_secp256k1.md  blake3_hashes.md  constants_stark.md  deep_queries_stark.md  ec_ext5_math.md  elgamal_ecgfp5_crypto.md  ext2_math.md  ext2fri_fri.md  ext5_curve_math.md  ext5_math.md  ext5_scalar_math.md  falcon_dsa.md  fri_crypto.md  fri_math.md  frie2f4_fri.md  frif2e2_fri.md  frif4e2_fri.md  gfp5_math.md  group_ec_ext5.md  group_ecgfp5.md  helper_fri.md  keccak256_hashes.md  mem.md  mem_std.md  mmr_collections.md  native_hashes.md  ntt512_math.md  ood_frames_stark.md  poly512_math.md  public_inputs_stark.md  random_coin_stark.md  rescue_prime_hashes.md  rlp_str.md  scalar_field_ec_ext5.md  scalar_field_ecgfp5.md  scalar_field_secp256k1.md  secp256k1_base_field_math.md  secp256k1_ec_math.md  (+16 more)
stdlib/src/: asm.rs  dsa.rs  errors.rs  event_handlers.rs  lib.rs
stdlib/tests/: main.rs  mast_forest_merge.rs  mem.rs
test-utils/: Cargo.toml  README.md
test-utils/src/: crypto.rs  host.rs  lib.rs  rand.rs  test_builders.rs
tools/: Cargo.toml  debugger.html  example.masm  example_stack_input.txt  main.html  repl.html
tools/src/: main.rs
verifier/: Cargo.toml  README.md
verifier/src/: lib.rs
vm/: Cargo.toml
vm/src/: lib.rs
(+1291 files in other folders)
