[workspace]
members = [
    "air",
    "assembly",
    "core",
    "miden-vm",
    "package",
    "processor",
    "prover",
    "stdlib",
    "syntax",
    "test-utils",
    "verifier",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Miden contributors"]
homepage = "https://polygon.technology/polygon-miden"
repository = "https://github.com/0xMiden/miden-vm"
exclude = [".github/"]

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = true

[profile.test-dev]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
thiserror = { version = "2.0", default-features = false }
