[workspace]
members = [
    "air",
    "assembly",
    "assembly-syntax",
    "core",
    "core-diagnostics",
    "miden-vm",
    "package",
    "processor",
    "prover",
    "stdlib",
    "test-utils",
    "verifier",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Miden contributors"]
homepage = "https://polygon.technology/polygon-miden"
repository = "https://github.com/0xMiden/miden-vm"
exclude = [".github/"]

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = true

[profile.test-dev]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
# Workspace crates
miden-assembly = { path = "./assembly", version = "0.15.0", default-features = false }
miden-assembly-syntax = { path = "./assembly-syntax", version = "0.15.0", default-features = false }
miden-core = { path = "./core", version = "0.15.0", default-features = false }
miden-core-diagnostics = { path = "./core-diagnostics", version = "0.15.0", default-features = false }
miden-mast-package = { path = "./package", version = "0.15.0", default-features = false }

# Miden crates
miden-crypto = { version = "0.15", default-features = false }
miden-formatting = { version = "0.1", default-features = false }

# Third-party crates
log = "0.4"
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
    "rc",
] }
smallvec = { version = "1.13", default-features = false, features = [
    "union",
    "const_generics",
    "const_new",
] }
thiserror = { version = "2.0", default-features = false }
