[package]
name = "miden-air"
version = "0.5.0"
description = "Algebraic intermediate representation of Miden VM processor"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
categories = ["cryptography", "no-std"]
keywords = ["air", "arithmetization", "crypto", "miden"]
edition = "2021"
rust-version = "1.67"

[lib]
bench = false
doctest = false

[[bench]]
name = "compute_op_flags"
harness = false

[[bench]]
name = "enforce_stack_constraint"
harness = false

[features]
default = ["std"]
std = ["vm-core/std", "winter-air/std"]

[dependencies]
vm-core = { package = "miden-core", path = "../core", version = "0.5", default-features = false }
winter-air = { package = "winter-air", version = "0.6", default-features = false }

[dev-dependencies]
criterion = "0.4"
proptest = "1.1"
rand-utils = { package = "winter-rand-utils", version = "0.6" }
