[package]
name = "miden-air"
version = "0.8.0"
description = "Algebraic intermediate representation of Miden VM processor"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
documentation = "https://docs.rs/miden-air/0.8.0"
categories = ["cryptography", "no-std"]
keywords = ["air", "arithmetization", "crypto", "miden"]
edition = "2021"
rust-version = "1.73"

[lib]
bench = false
doctest = false

[[bench]]
name = "compute_op_flags"
harness = false

[[bench]]
name = "enforce_stack_constraint"
harness = false

[features]
default = ["std"]
std = ["vm-core/std", "winter-air/std"]

[dependencies]
vm-core = { package = "miden-core", path = "../core", version = "0.8", default-features = false }
winter-air = { package = "winter-air", version = "0.7", default-features = false }
winter-prover = { package = "winter-prover", version = "0.7", default-features = false }

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"
rand-utils = { package = "winter-rand-utils", version = "0.7" }
