[package]
name = "miden-air"
version = "0.12.0"
description = "Algebraic intermediate representation of Miden VM processor"
documentation = "https://docs.rs/miden-air/0.12.0"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["air", "arithmetization", "crypto", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[[bench]]
name = "compute_op_flags"
harness = false

[[bench]]
name = "enforce_stack_constraint"
harness = false

[features]
default = ["std"]
std = ["vm-core/std", "winter-air/std", "thiserror/std"]
testing = []

[dependencies]
thiserror = { workspace = true }
vm-core = { package = "miden-core", path = "../core", version = "0.12", default-features = false }
winter-air = { package = "winter-air", version = "0.11", default-features = false }
winter-prover = { package = "winter-prover", version = "0.11", default-features = false }

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
rand-utils = { package = "winter-rand-utils", version = "0.11" }
