[package]
name = "miden-assembly-syntax"
version = "0.15.0"
description = "Parsing and semantic analysis of the Miden Assembly language"
documentation = "https://docs.rs/miden-assembly-syntax/0.15.0"
readme = "README.md"
categories = ["compilers", "no-std"]
keywords = ["assembly", "language", "syntax", "miden"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[features]
default = ["std"]
std = [
    "aho-corasick/std",
    "miden-core/std",
    "miden-core-diagnostics/std",
    "thiserror/std",
]
arbitrary = ["dep:proptest", "dep:proptest-derive"]
testing = ["arbitrary", "logging"]
logging = ["dep:env_logger"]

[dependencies]
aho-corasick = { version = "1.1", default-features = false }
env_logger = { version = "0.11", optional = true }
lalrpop-util = { version = "0.22", default-features = false }
log.workspace = true
miden-core.workspace = true
miden-core-diagnostics.workspace = true
proptest = { version = "1.6", optional = true, default-features = false, features = [
    "no_std",
    "alloc",
] }
proptest-derive = { version = "0.5", optional = true, default-features = false }
regex = { version = "1.10", default-features = false, features = [
    "unicode",
    "perf",
] }
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
env_logger = "0.11"
proptest = { version = "1.6", default-features = false, features = [
    "no_std",
    "alloc",
] }
pretty_assertions = "1.4"

[build-dependencies]
lalrpop = { version = "0.22", default-features = false }
rustc_version = "0.4"
