[package]
name = "miden-assembly"
version = "0.15.0"
description = "Miden VM assembly language"
documentation = "https://docs.rs/miden-assembly/0.15.0"
readme = "README.md"
categories = ["compilers", "no-std"]
keywords = ["assembler", "assembly", "language", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["aho-corasick/std", "miette/fancy", "miette/std", "vm-core/std", "thiserror/std"]
testing = ["dep:regex", "dep:proptest", "dep:proptest-derive"]

[dependencies]
aho-corasick = { version = "1.1", default-features = false }
lalrpop-util = { version = "0.20", default-features = false }
miette = { package = "miden-miette", version = "8.0", default-features = false, features = [
    "fancy-no-syscall",
    "derive"
] }
proptest = { version = "1.6", optional = true, default-features = false, features = [
  "no_std", "alloc"
] }
proptest-derive = { version = "0.5", optional = true, default-features = false }
regex = { version = "1.10", optional = true, default-features = false, features = ["unicode", "perf"] }
smallvec = { version = "1.13", features = ["union", "const_generics", "const_new"] }
thiserror = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
unicode-width = { version = "0.2", features = ["no_std"] }
vm-core = { package = "miden-core", path = "../core", version = "0.15", default-features = false, features = [
    "diagnostics",
] }

[dev-dependencies]
pretty_assertions = "1.4"
regex = { version = "1.10", default-features = false, features = [ "unicode", "perf"] }

[build-dependencies]
lalrpop = { version = "0.20", default-features = false }
rustc_version = "0.4"
