[package]
name = "miden-assembly"
version = "0.15.0"
description = "Miden VM assembly language"
documentation = "https://docs.rs/miden-assembly/0.15.0"
readme = "README.md"
categories = ["compilers", "no-std"]
keywords = ["assembler", "assembly", "language", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["miden-assembly-syntax/std", "miden-core/std", "thiserror/std"]
testing = ["logging", "miden-assembly-syntax/testing"]
logging = ["dep:env_logger"]

[dependencies]
env_logger = { version = "0.11", optional = true }
log = "0.4"
miden-core = { path = "../core", version = "0.15", default-features = false, features = [
    "diagnostics",
] }
miden-assembly-syntax = { path = "../syntax", version = "0.15", default-features = false }
miden-mast-package = { path = "../package", version = "0.15", default-features = false }
smallvec = { version = "1.13", features = [
    "union",
    "const_generics",
    "const_new",
] }
thiserror.workspace = true

[dev-dependencies]
miden-mast-package = { path = "../package", version = "0.15", features = [
    "arbitrary",
] }
pretty_assertions = "1.4"
proptest = { version = "1.6", default-features = false, features = [
    "no_std",
    "alloc",
] }
