[package]
name = "miden-assembly"
version = "0.15.0"
description = "Miden VM assembly language"
documentation = "https://docs.rs/miden-assembly/0.15.0"
readme = "README.md"
categories = ["compilers", "no-std"]
keywords = ["assembler", "assembly", "language", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["miden-assembly-syntax/std", "miden-core/std", "thiserror/std"]
testing = ["logging", "miden-assembly-syntax/testing"]
logging = ["dep:env_logger"]

[dependencies]
env_logger = { version = "0.11", optional = true }
log.workspace = true
miden-core.workspace = true
miden-assembly-syntax.workspace = true
miden-mast-package.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
miden-mast-package = { workspace = true, features = ["arbitrary"] }
pretty_assertions = "1.4"
proptest = { version = "1.6", default-features = false, features = [
    "no_std",
    "alloc",
] }
