[package]
name = "miden-core"
version = "0.13.0"
description = "Miden VM core components"
documentation = "https://docs.rs/miden-core/0.13.0"
readme = "README.md"
categories = ["emulators", "no-std"]
keywords = ["instruction-set", "miden", "program"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
diagnostics = ["dep:miette"]
std = [
    "dep:parking_lot",
    "memchr/std",
    "miden-crypto/std",
    "miden-formatting/std",
    "math/std",
    "winter-utils/std",
    "thiserror/std",
]

[dependencies]
lock_api = { version = "0.4", features = ["arc_lock"] }
math = { package = "winter-math", version = "0.12", default-features = false }
memchr = { version = "2.7", default-features = false }
#miden-crypto = { version = "0.13", default-features = false }
miden-crypto = {git = "https://github.com/0xPolygonMiden/crypto", branch = "al-update-winter"}
miden-formatting = { version = "0.1", default-features = false }
miette = { package = "miden-miette", version = "8.0", default-features = false, optional = true, features = [
    "fancy-no-syscall",
    "derive"
] }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
parking_lot = { version = "0.12", optional = true }
thiserror = { workspace = true }
winter-utils = { package = "winter-utils", version = "0.12", default-features = false }

[dev-dependencies]
loom = "0.7"
proptest = "1.6"
rand-utils = { package = "winter-rand-utils", version = "0.12" }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
