[package]
name = "miden-core"
version = "0.15.0"
description = "Miden VM core components"
documentation = "https://docs.rs/miden-core/0.15.0"
readme = "README.md"
categories = ["emulators", "no-std"]
keywords = ["instruction-set", "miden", "program"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = [
    "miden-crypto/std",
    "miden-formatting/std",
    "math/std",
    "winter-utils/std",
    "thiserror/std",
]
serde = ["miden-core-diagnostics/serde", "miden-crypto/serde", "math/serde"]
# DEPRECATED
diagnostics = []

[dependencies]
math = { package = "winter-math", version = "0.13", default-features = false }
miden-crypto = { version = "0.15", default-features = false }
miden-formatting.workspace = true
miden-core-diagnostics.workspace = true
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
thiserror.workspace = true
winter-utils = { version = "0.13", default-features = false }

[dev-dependencies]
proptest = "1.6"
rand-utils = { package = "winter-rand-utils", version = "0.13" }
