[package]
name = "distaff"
version = "0.1.0"
description="TODO"
authors = ["distaff contributors"]
readme="README.md"
edition = "2018"
repository = "TODO"
license = "MIT"

[lib]
name = "distaff"
path = "src/lib.rs"
bench = false

[features]
concurrent = ["winterfell/concurrent"]

[dependencies]
air = { package = "distaff-air", path = "../air" }
assembly = { package = "distaff-assembly", path = "../assembly" }
processor = { package = "distaff-processor", path = "../processor" }
hex = "0.4"
log = "0.4"
winterfell = "0.2"
