[package]
name = "examples"
version = "0.1.0"
description = "Examples of using Distaff VM"
authors = ["distaff contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/maticnetwork/distaff"
edition = "2018"

[lib]
bench = false
doc = false

[[bin]]
name = "distaff"
path = "src/main.rs"
bench = false
doc = false

[dependencies]
distaff = { path = "../distaff" }
env_logger = "0.9"
hex = "0.4"
log = "0.4"
structopt = { version = "0.3", default-features = false }
vm-core = { path = "../core", package = "distaff-core" }
winter-rand-utils = "0.2"
