[package]
name = "miden-gkr"
version = "0.8.0"
description = "Miden VM prover"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
documentation = "https://docs.rs/miden-prover/0.8.0"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "gkr", "zkp"]
edition = "2021"
rust-version = "1.75"

[dependencies]
vm-core = { package = "miden-core", path = "../core", version = "0.8", default-features = false }
