[package]
name = "miden-test-utils"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[dependencies]
assembly = { package = "miden-assembly", path = "../assembly", version = "0.6", default-features = false }
processor = { package = "miden-processor", path = "../processor", version = "0.6", features = ["internals"], default-features = false }
proptest = "1.1"
prover = { package = "miden-prover", path = "../prover", version = "0.6", default-features = false }
rand-utils = { package = "winter-rand-utils", version = "0.6" }
test-case = "3.0.0"
verifier = { package = "miden-verifier", path = "../verifier", version = "0.6", default-features = false }
vm-core = { package = "miden-core", path = "../core", version = "0.6", default-features = false }
winterfell = { package = "winter-prover", version = "0.6", default-features = false }
