[package]
name = "miden-vm"
version = "0.15.0"
description = "Miden virtual machine"
documentation = "https://docs.rs/miden-vm/0.15.0"
readme = "README.md"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "stark", "virtual-machine", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "miden-vm"
path = "src/main.rs"
bench = false
doctest = false
required-features = ["executable"]

[lib]
path = "src/lib.rs"
bench = false
doctest = false

[[bench]]
name = "program_execution"
required-features = ["internal"]
harness = false

[[bench]]
name = "program_execution_fast"
required-features = ["internal", "no_err_ctx"]
harness = false

[[bench]]
name = "deserialize_std_lib"
harness = false

[[test]]
name = "miden-cli"
path = "tests/integration/main.rs"

[features]
concurrent = ["prover/concurrent", "std"]
default = ["std"]
executable = [
    "std",
    "internal",
    "dep:hex",
    "hex?/std",
    "dep:serde",
    "serde?/std",
    "dep:serde_derive",
    "dep:serde_json",
    "serde_json?/std",
    "dep:clap",
    "dep:rustyline",
    "dep:tracing-subscriber",
]
metal = ["prover/metal", "std"]
std = ["assembly/std", "processor/std", "prover/std", "verifier/std"]
# Removes proper error context from the error messages. Enable in production builds that need
# maximal performance. 
no_err_ctx = ["processor/no_err_ctx"]
# For internal use, not meant to be used by users
internal = ["dep:serde", "dep:serde_derive", "dep:serde_json", "dep:hex"]

[dependencies]
assembly = { package = "miden-assembly", path = "../assembly", version = "0.15", default-features = false }
blake3 = "1.8"
clap = { version = "4.4", features = ["derive"], optional = true }
hex = { version = "0.4", optional = true }
processor = { package = "miden-processor", path = "../processor", version = "0.15", default-features = false }
prover = { package = "miden-prover", path = "../prover", version = "0.15", default-features = false }
package = { package = "miden-mast-package", path = "../package", version = "0.15", default-features = false }
rustyline = { version = "16.0", default-features = false, optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
stdlib = { package = "miden-stdlib", path = "../stdlib", version = "0.15", default-features = false }
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
] }
tracing-subscriber = { version = "0.3", optional = true, features = [
    "std",
    "env-filter",
] }
tracing-forest = { version = "0.1", optional = true, features = [
    "ansi",
    "smallvec",
] }
verifier = { package = "miden-verifier", path = "../verifier", version = "0.15", default-features = false }
vm-core = { package = "miden-core", path = "../core", version = "0.15", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.6", features = ["async_tokio"] }
escargot = "0.5"
num-bigint = "0.4"
predicates = "3.1"
test-utils = { package = "miden-test-utils", path = "../test-utils" }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
vm-core = { package = "miden-core", path = "../core", version = "0.15" }
winter-fri = { package = "winter-fri", version = "0.13" }
rand_chacha = "0.9"
walkdir = "2.5"
