[package]
name = "miden-vm"
version = "0.6.0"
description="Miden virtual machine"
authors = ["miden contributors"]
readme="README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "stark", "virtual-machine", "zkp"]
edition = "2021"
rust-version = "1.67"

[[bin]]
name = "miden"
path = "src/main.rs"
bench = false
doctest = false
required-features = ["executable"]

[lib]
name = "miden"
path = "src/lib.rs"
bench = false
doctest = false

[[bench]]
name = "program_compilation"
harness = false

[[bench]]
name = "program_execution"
harness = false

[[test]]
name = "miden"
path = "tests/integration/main.rs"

[features]
concurrent = ["prover/concurrent", "std"]
default = ["std"]
executable = ["env_logger", "hex/std", "std", "serde/std", "serde_derive", "serde_json/std", "structopt", "rustyline"]
std = ["assembly/std", "log/std", "processor/std", "prover/std", "verifier/std"]

[dependencies]
assembly = { package = "miden-assembly", path = "../assembly", version = "0.6", default-features = false }
env_logger = { version = "0.10", default-features = false, optional = true }
hex = { version = "0.4", optional = true }
log = { version = "0.4", default-features = false }
processor = { package = "miden-processor", path = "../processor", version = "0.6", default-features = false }
prover = { package = "miden-prover", path = "../prover", version = "0.6", default-features = false }
rustyline = { version = "10.0.0", default-features = false, optional = true}
serde = {version = "1.0.117", optional = true }
serde_derive = {version = "1.0.117", optional = true }
serde_json = {version = "1.0.59", optional = true }
stdlib = { package = "miden-stdlib", path = "../stdlib", version = "0.5", default-features = false }
structopt = { version = "0.3", default-features = false, optional = true }
verifier = { package = "miden-verifier", path = "../verifier", version = "0.6", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"
escargot = "0.5.7"
num-bigint = "0.4"
predicates = "3.0"
test-utils = { package = "miden-test-utils", path = "../test-utils" }
vm-core = { package = "miden-core", path = "../core", version = "0.6" }
winter-fri = { package = "winter-fri", version = "0.6" }
