[package]
name = "miden-vm"
version = "0.8.0"
description = "Miden virtual machine"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
documentation = "https://docs.rs/miden-vm/0.8.0"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "stark", "virtual-machine", "zkp"]
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "miden"
path = "src/main.rs"
bench = false
doctest = false
required-features = ["executable"]

[lib]
path = "src/lib.rs"
bench = false
doctest = false

[[bench]]
name = "program_compilation"
harness = false

[[bench]]
name = "program_execution"
harness = false

[[test]]
name = "miden"
path = "tests/integration/main.rs"

[features]
concurrent = ["prover/concurrent", "std"]
default = ["std"]
executable = [
    "dep:hex",
    "hex?/std",
    "std",
    "dep:serde",
    "serde?/std",
    "dep:serde_derive",
    "dep:serde_json",
    "serde_json?/std",
    "dep:clap",
    "dep:rustyline",
    "dep:tracing-subscriber",
]
metal = ["prover/metal", "std"]
std = [
    "assembly/std",
    "assembly/formatter",
    "processor/std",
    "prover/std",
    "verifier/std",
]

[dependencies]
assembly = { package = "miden-assembly", path = "../assembly", version = "0.8", default-features = false }
blake3 = "1.5"
clap = { version = "4.4", features = ["derive"], optional = true }
hex = { version = "0.4", optional = true }
processor = { package = "miden-processor", path = "../processor", version = "0.8", default-features = false }
prover = { package = "miden-prover", path = "../prover", version = "0.8", default-features = false }
rustyline = { version = "13.0", default-features = false, optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
stdlib = { package = "miden-stdlib", path = "../stdlib", version = "0.8", default-features = false }
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
] }
tracing-subscriber = { version = "0.3", features = [
    "std",
    "env-filter",
], optional = true }
tracing-forest = { version = "0.1", features = [
    "ansi",
    "smallvec",
], optional = true }
verifier = { package = "miden-verifier", path = "../verifier", version = "0.8", default-features = false }
vm-core = { package = "miden-core", path = "../core", version = "0.8", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5"
escargot = "0.5"
num-bigint = "0.4"
predicates = "3.0"
test-utils = { package = "miden-test-utils", path = "../test-utils" }
vm-core = { package = "miden-core", path = "../core", version = "0.8" }
winter-fri = { package = "winter-fri", version = "0.8" }
