[package]
name = "miden-mast-package"
version = "0.13.2"
description = "Package containing a compiled Miden MAST artifact with declared dependencies and exports"
documentation = "https://docs.rs/miden-mast-package/0.13.2"
readme = "README.md"
categories = ["compilers", "no-std"]
keywords = ["package", "language", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[dependencies]
assembly = { package = "miden-assembly", path = "../assembly", version = "0.13", default-features = false }
derive_more = "0.99"
vm-core = { package = "miden-core", path = "../core", version = "0.13", default-features = false }

[dev-dependencies]
proptest = "1.6"
proptest-derive = "0.5"
