[package]
name = "miden-mast-package"
version = "0.15.0"
description = "Package containing a compiled Miden MAST artifact with declared dependencies and exports"
documentation = "https://docs.rs/miden-mast-package/0.15.0"
readme = "README.md"
categories = ["compilers", "no-std"]
keywords = ["package", "language", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = []
arbitrary = [
    "dep:proptest-derive",
    "dep:proptest",
    "miden-assembly-syntax/arbitrary",
]

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
miden-assembly-syntax = { path = "../assembly-syntax", version = "0.15", default-features = false }
miden-core = { path = "../core", version = "0.15", default-features = false }
proptest = { version = "1.6", optional = true }
proptest-derive = { version = "0.5", optional = true }
